--- a/src/ui.css
+++ b/src/ui.css
@@ -19,7 +19,7 @@ button {
 
 #create {
   box-shadow: none;
-  background: #18A0FB;
+  background: #18a0fb;
   color: white;
 }
 
@@ -31,7 +31,7 @@ input {
 }
 
 .info-text {
-  text-align: left; 
+  text-align: left;
   margin-bottom: 20px;
 }
 
@@ -53,7 +53,22 @@ input {
   padding: 4px;
 }
 
-input:hover { box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1); }
-button:focus { box-shadow: inset 0 0 0 2px #18A0FB; }
-#create:focus { box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.3); }
-input:focus { box-shadow: inset 0 0 0 2px #18A0FB; }
+.color-toggle {
+  display: inline-block;
+  width: auto;
+  cursor: pointer;
+  padding: 4px;
+}
+
+input:hover {
+  box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.1);
+}
+button:focus {
+  box-shadow: inset 0 0 0 2px #18a0fb;
+}
+#create:focus {
+  box-shadow: inset 0 0 0 2px rgba(0, 0, 0, 0.3);
+}
+input:focus {
+  box-shadow: inset 0 0 0 2px #18a0fb;
+}
