--- a/src/ui.css
+++ b/src/ui.css
@@ -4,7 +4,7 @@ body {
   margin: 20px;
   height: 100%;
 }
-
+/* 
 button {
   border-radius: 5px;
   background: white;
@@ -15,20 +15,21 @@ button {
   box-shadow: inset 0 0 0 1px black;
   outline: none;
   cursor: pointer;
-}
+} */
 
-#create {
+.create-button {
   box-shadow: none;
   background: #18a0fb;
   color: white;
 }
 
+/* 
 input {
   border: none;
   outline: none;
   padding: 8px;
   width: 100%;
-}
+} */
 
 .info-text {
   text-align: left;
@@ -38,7 +39,7 @@ input {
 .outer-wrapper {
   height: 100%;
 }
-
+/* 
 .input-wrapper {
   display: flex;
   flex-direction: column;
@@ -51,11 +52,11 @@ input {
 .toggle-wrapper {
   flex-direction: row;
   align-items: center;
-}
-
+} */
+/* 
 .toggle-wrapper > input {
   margin-right: 8px;
-}
+} */
 
 .color-input {
   height: 35px;
